@@ -4,6 +4,8 @@ Changes to Version 2.1-3
 
   o Fixed random-data-generation dialogs so that code works in R Markdown file.
 
+  o Fixed custom contrasts in define-contrasts dialog.
+
 Changes to Version 2.1-2
 
   o Fixed ignoring of Rcmdr option "ask.on.exit" and "ask.to.exit", causing exiting without asking in non-English locales (bug report by Yoshinobu Kanda).
